################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the `vecbit` Rust project to the Rust build tool, Cargo. #
################################################################################

[package]
name = "vecbit"
version = "0.16.0"
authors = [
	"sunjay <varma.sunjay@gmail.com>",
]
categories = [
	"data-structures",
	"embedded",
	"no-std",
	"rust-patterns",
]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/vecbit"
edition = "2018"
homepage = "https://sunjay.net/crates/vecbit"
keywords = [
	"bits",
	"vecbit",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunjay/vecbit"

[features]
alloc = []
atomic = []
default = [
	"atomic",
	"std",
]
std = [
	"alloc",
]
testing = [
	"atomic",
	"serde",
	"std",
]

[dependencies]
radium = "0.2"

[dependencies.serde]
default-features = false
features = [
	"derive",
]
optional = true
version = "1"

# Crates required when running the test suite.
[dev-dependencies]
serde = "1"
serde_json = "1"
serde_test = "1"

# Indicates the features that docs.rs should enable when building documentation.
[package.metadata.docs.rs]
features = [
	"atomic",
	"serde",
	"std",
]

[badges.codecov]
repository = "sunjay/vecbit"
branch = "master"
service = "github"

[badges.is-it-maintained-issue-resolution]
repository = "sunjay/vecbit"

[badges.is-it-maintained-open-issues]
repository = "sunjay/vecbit"

[badges.maintenance]
status = "actively-developed"
